the error with the alignment of authors' surnames at the bottom of the feedback has been fixed

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    max-width: 180px;
+    max-width: 200px;
     width: 100%;
     padding: 1.4em;
     border: 1px solid black;
@@ -65,6 +65,10 @@
     content: " ";
 }
 .feetback-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    height: 80px;
     text-align: end;
 }
 .feedback-author {
